--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <div id="create-user">
-  <h3><%= button_to "Create New User", href: "/register", method: :get %></h3>>
+  <h3><%= button_to "Create New User", url: "/register", method: :get %></h3>
 </div>
 
-<div id="existing-users">
+<div id="users">
   <h3>Existing Users</h3>
   <ul>
     <% @users.each do |user| %>
-      <li><%= link_to "#{user.email}", href: "/users/#{user.id}", method: :get %></li>
+      <li><%= link_to "#{user.email}", url: "/users/#{user.id}", method: :get %></li>
     <% end %>
   </ul>
 </div>
