--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
 
   <body>
     <%= link_to "Home", "/"%>
+    <h1>Viewing Party!</h1>
+    <% flash.each do |type, message| %>
+      <%= message %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
