--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -7,5 +7,6 @@
 <h3> Existing Users</h3>
 
 <% @users.each do |user| %>
-  <%= link_to user.email %>
+
+  <li><%= link_to user.email, user_path(user)%></li>
 <% end %>
