--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h2><%= @user.name %>'s Dashboard</h2>
 <hr />
 <p>
-  <%= button_to "Discover Movies" %>
+  <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
 </p>
 <section id="viewing_parties">
   <h3>Viewing Parties</h3>
