--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render partial: "shared/landing_header" %><br><br>
 
-<%= button_to "Create New User", new_user_path %>
+<%= button_to "Create New User", register_path %>
 
 <h3> Existing Users </h3>
 <% @users.each do |user| %>
