--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,11 @@
 <h3>Register a New User</h3>
 
 <%= form_with(url: register_path, model: @user, method: :post) do |f| %>
-  <%= f.label :user_name %>
-  <%= f.text_field :user_name %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
 
-  <%= f.label :user_email %>
-  <%= f.text_field :user_email %>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
 
   <%= f.submit "Register" %>
 <% end %>
