--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
+    <%= link_to "Home", root_path %>
     <h1 id="header">Viewing Party</h1>
-    
     <%= yield %>
   </body>
 </html>
