--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
 <h1><%= @user.name %>'s Dashboard</h1>
+<br>
+<div id='discover_movies'>
+  <%= button_to "Discover Movies", discover_path(@user.id), method: :get %>
+</div>
