--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,4 @@
   <p><%= party.name %></p>
 <% end %>
 <br>
-<%= button_to "Discover Movies", discover_user_path(@user) %>
+<%= button_to "Discover Movies", discover_user_path(@user), method: :get %>
