--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
   <%= form_with model: @user, local: true do |f| %>  
-    <%= f.label :name, 'Name:' %><br>
-    <%=  f.text_field :name%><br>
-    <%= f.label :email, 'Email:' %><br>
-    <%=  f.text_field :email%><br>
-    <%= f.submit "Register" %>
+    <p><%= f.label :name, 'Name:' %></p>
+    <p><%=  f.text_field :name%></p>
+    <p><%= f.label :email, 'Email:' %></p>
+    <p><%=  f.text_field :email%></p> 
+    <p><%= f.submit "Register" %></p>
   <% end %>
